# matplotlib-extract

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
matplotlib_extract/: __init__.py  main.py
tests/: test_extract_elements.py
