
[metadata]
name = matplotlib_extract
author = Remi Delaporte-Mathurin
author_email = rdelaportemathurin@gmail.com
description = Extract matplotlib plots components
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RemDelaporteMathurin/matplotlib-extract
license = Apache-2.0
license_file = LICENSE
classifiers =
    Natural Language :: English
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source = https://github.com/RemDelaporteMathurin/matplotlib-extract
    Tracker = https://github.com/RemDelaporteMathurin/matplotlib-extract/issues

[options]
packages = find:
python_requires= >=3.6
install_requires=
    matplotlib >= 3.2.2

[options.extras_require]
tests = 
    pytest >= 5.4.3